infrastructure/istio/istiod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiod
  namespace: istio-system
  labels:
    app: istiod
    istio: pilot
    release: istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istiod
      istio: pilot
  template:
    metadata:
      labels:
        app: istiod
        istio: pilot
        sidecar.istio.io/inject: "false"
      annotations:
        kubectl.kubernetes.io/default-container: discovery
        kubectl.kubernetes.io/default-logs-container: discovery
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15014"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: discovery
        image: docker.io/istio/pilot:1.22.0
        args:
        - discovery
        - --monitoringAddr=:15014
        - --log_output_level=default:info
        - --domain=cluster.local
        - --keepaliveMaxServerConnectionAge=30m
        ports:
        - containerPort: 15010
          protocol: TCP
        - containerPort: 15017
          protocol: TCP
        - containerPort: 15014
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: 15014
          initialDelaySeconds: 1
          periodSeconds: 3
          timeoutSeconds: 5
        volumeMounts:
        - name: istio-token
          mountPath: /var/run/secrets/tokens
          readOnly: true
        - name: istio-data
          mountPath: /var/lib/istio/data
        - name: istio-podinfo
          mountPath: /etc/istio/pod
        - name: istio-config
          mountPath: /etc/istio/config
        - name: istod-ca-cert
          mountPath: /var/run/secrets/istio-dns
        resources:
          requests:
            cpu: 500m
            memory: 2048Mi
      serviceAccountName: istiod
      volumes:
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - name: istio-data
        emptyDir: {}
      - name: istio-podinfo
        downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
      - name: istio-config
        configMap:
          name: istio
      - name: istod-ca-cert
        configMap:
          name: istio-ca-root-cert
---
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: istio-system
  labels:
    app: istiod
    istio: pilot
    release: istio
spec:
  ports:
  - name: grpc-xds
    port: 15010
    protocol: TCP
    targetPort: 15010
  - name: https-dns
    port: 15012
    protocol: TCP
    targetPort: 15012
  - name: https-webhook
    port: 443
    protocol: TCP
    targetPort: 15017
  - name: http-monitoring
    port: 15014
    protocol: TCP
    targetPort: 15014
  selector:
    app: istiod
    istio: pilot
