infrastructure/istio/kiali.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
    version: v1.73.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      name: kiali
      labels:
        app: kiali
        version: v1.73.0
        sidecar.istio.io/inject: "false"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: kiali
      containers:
      - image: quay.io/kiali/kiali:v1.73.0
        imagePullPolicy: Always
        name: kiali
        command:
        - /opt/kiali/kiali
        - -config
        - /kiali-configuration/config.yaml
        - -v
        - "3"
        ports:
        - name: api-port
          containerPort: 20001
        - name: http-metrics
          containerPort: 9090
        readinessProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
        volumeMounts:
        - name: kiali-configuration
          mountPath: /kiali-configuration
        - name: kiali-secret
          mountPath: /kiali-secret
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 1Gi
      volumes:
      - name: kiali-configuration
        configMap:
          name: kiali
      - name: kiali-secret
        secret:
          name: kiali
          optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
    version: v1.73.0
spec:
  ports:
  - name: http
    port: 20001
    protocol: TCP
  - name: http-metrics
    port: 9090
    protocol: TCP
  selector:
    app: kiali
